# ImageProcessingServer

./: .gitignore  CMakeLists.txt  README.md  classes.txt  detection.cpp  detection.h  inference.cpp  inference.h  ipServer.sln  ipServer.vcxproj  ipServer.vcxproj.filters  main.cpp
